# PathCraft

./: .gitignore  README.md  STRUCTURE_OPTIMIZATION_PROGRESS.md  build.ps1  install.ps1  install.sh  main.py  pyproject.toml
.github/workflows/: tests.yml
assets/ui/: app.js  index.html  style.css
packaging/: pathcraft_portable.pyw
src/pathcraft/: __init__.py  __main__.py  app_service.py  cli.py  config.py  desktop_bridge.py  desktop_support.py  diagnostics.py  dialogs.py  exceptions.py  filesystem.py  main.py  mapping_rename.py  pdf_convert.py  prompts.py  rename.py  rules.py  scanner.py  terminal_editor.py  terminal_layout.py  terminal_menu.py  undo.py  utils.py  windows_app.py
src/pathcraft/pdf/: __init__.py  extract.py  render.py
tests/: pdf_fakes.py  test_app_service.py  test_cli.py  test_config.py  test_desktop_bridge.py  test_diagnostics.py  test_entrypoints.py  test_exceptions.py  test_mapping_rename.py  test_pdf_convert.py  test_pdf_extract.py  test_pdf_render.py  test_portable_build.py  test_prompts.py  test_rename.py  test_rules.py  test_scanner.py  test_utils.py  test_windows_app.py
